--- a/app/src/main/res/layout/idiot.xml
+++ b/app/src/main/res/layout/idiot.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".IdiotActivity">
     <LinearLayout
         android:layout_marginTop="120dp"
         android:layout_width="match_parent"
@@ -16,9 +16,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
         <TextView
-            android:layout_width="390dp"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
-            android:text="How to not entertain an idiot!"
+            android:text="How to entertain an idiot!"
             android:textSize="30sp"/>
         <TextView
             android:layout_weight="1"
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Click here"
-            android:textColor="#5f6fff"
+            android:textColor="#f13553"
             android:textSize="50sp"/>
         <TextView
             android:layout_weight="1"
